plugins {
    id 'application'
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.diffplug.spotless' version '7.0.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

javafx {
    version = '26'
    modules = ['javafx.controls']
}

application {
    mainClass = 'com.threeboys.MainApp'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

dependencies {
    implementation 'com.mysql:mysql-connector-j:9.2.0'
    testImplementation platform('org.junit:junit-bom:6.1.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform {
        excludeTags "integration"
    }
}

tasks.register("integrationTest", Test) {
    description = "Roda testes de integração"
    group = "verification"

    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath

    useJUnitPlatform {
        includeTags "integration"
    }
}

spotless {
    java {
        target 'src/**/*.java'
        importOrder()
        eclipse()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

tasks.register('fmt') {
    group = 'formatting'
    description = 'Formata o código Java com Spotless (google-java-format).'
    dependsOn 'spotlessApply'
}